kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: blue-green-istio
  labels:
    istio-injection: enabled
