kubernetes/deployment_blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment-blue
  namespace: istio-example-bg
  labels:
    app: myapp
    color: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      color: blue
  template:
    metadata:
      labels:
        app: myapp
        color: blue
    spec:
      containers:
      - name: myapp
        image: aramirol/bluegreen-example:0.0.1
        ports:
        - containerPort: 80
