kubernetes/deployment_green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment-green
  namespace: istio-example-bg
  labels:
    app: myapp
    color: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      color: green
  template:
    metadata:
      labels:
        app: myapp
        color: green
    spec:
      containers:
      - name: myapp
        image: aramirol/bluegreen-example:0.0.2
        ports:
        - containerPort: 80
