kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: blue-green-istio
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: myapp
