kubernetes/all.yml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-example-bg
  labels:
    istio-injection: enabled  

---

apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: istio-example-bg
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: myapp

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: istio-example-bg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - host: app.demo.lab
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: myapp-service
            port: 
              number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp-gateway
  namespace: istio-example-bg
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "app.istio.demo.lab"

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp-destinationrule
  namespace: istio-example-bg
spec:
  host: myapp-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: route
          ttl: 2880s
  subsets:
  - name: blue
    labels:
      color: blue
  - name: green
    labels:
      color: green

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-virtualservice
  namespace: istio-example-bg
spec:
  hosts:
  - "app.istio.demo.lab"
  gateways:
  - myapp-gateway
  http:
  - name: myapp-test
    match:
    - headers:
        cookie:
          regex: "^(.*?;)?(test=true)(;.*)?$"
    route:
    - destination:
        host: myapp-service
        subset: green

  - name: myapp-default
    route:
    - destination:
        host: myapp-service
        subset: blue

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment-blue
  namespace: istio-example-bg
  labels:
    app: myapp
    color: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      color: blue
  template:
    metadata:
      labels:
        app: myapp
        color: blue
    spec:
      containers:
      - name: myapp
        image: aramirol/bluegreen-example:0.0.1
        resources:
          limits:
            memory: 50Mi
            cpu: 50m
          requests:
            memory: 10Mi
            cpu: 10m
        ports:
        - containerPort: 80
