kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: istio-example-bg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - host: app.demo.lab
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: myapp-service
            port: 
              number: 80
