kubernetes/virtualservice_green.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-virtualservice
  namespace: blue-green-istio
spec:
  hosts:
  - "app.istio.demo.lab"
  gateways:
  - myapp-gateway
  http:
  - name: myapp-test
    match:
    - headers:
        cookie:
          regex: "^(.*?;)?(test=true)(;.*)?$"
    route:
    - destination:
        host: myapp-service
        subset: blue

  - name: myapp-default
    route:
    - destination:
        host: myapp-service
        subset: green
